# Zauberwald18

./: README.md  package.json  script.js
PCB/TERMINAL_SHIELD_ESP32/: TERMINAL_SHIELD_ESP32.b#1  TERMINAL_SHIELD_ESP32.b#3  TERMINAL_SHIELD_ESP32.sch
PCB/TERMINAL_SHIELD_ESP32/GERBER/CAMOutputs/DrillFiles/: drills.xln
PCB/TERMINAL_SHIELD_ESP32/GERBER/CAMOutputs/GerberFiles/: copper_bottom.gbr  copper_top.gbr  gerber_job.gbrjob  profile.gbr  silkscreen_top.gbr  soldermask_bottom.gbr  soldermask_top.gbr  solderpaste_top.gbr
example/: example.pde  viz.pde
example/data/: data.csv
objects/JD_FP_MW_code/: JD_FP_MW_code.ino  analogWrite.ino  ledStrip.ino  object.ino
objects/test/: .gitignore  CMakeLists.txt
objects/test/src/: anemometer.h  anemoteter.c  apa.c  apa.h  apds.c  apds.h  enc.c  enc.h  light.c  light.h  main.c  mot.c  mot.h  neo.c  neo.h  neo3.c  neo3.h  neo4.c  neo4.h  neo5.c  neo5.h  neoPixelStandard.c  neoPixelStandard.h  object1.c  object1.h  object2.c  object2.h  object3.c  object3.h  object4.c  object4.h  object5.c  object5.h  object6.c  object6.h  servo.c  servo.h  servoIOT.c  servoIOT.h
template/: helpers.pde  template.pde  viz.pde
visualization/src/: MainClass.java  Sketch.java
visualization/src/awave/: Curve.java  Segment.java  Visualization.java
visualization/src/blitzkraftwerk/: ArcLight.java  ArcRain.java  ArcSun.java  ArcWind.java  Visualization.java
visualization/src/common/: Helpers.java
visualization/src/data/: bk_lightning.csv  bk_rain.csv  bk_sun.csv  bk_wind.csv  dedo_solar.csv  dedo_water.csv  dedo_wind.csv  electroswing.csv  radschlag.csv  rd_solar.csv  rd_water.csv  rd_wind.csv
visualization/src/dedo/: Curve.java  Segment.java  Visualization.java
visualization/src/electroswing/: Rings.java  Visualization.java
visualization/src/kenos/: Clock.java  Data.java  FixedClock.java  Rings.java  Visualization.java
visualization/src/radar/: Visualization.java
visualization/src/radschlag/: Clock.java  FixedClock.java  Rings.java  Visualization.java
visualization/src/wawiso/: City.java  Particle.java  Visualization.java
viz/: index.html  package.json  script.db252507.js
